--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # You should customize this list as applicable to your project.
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
+/venv
+/.idea
 
 # Node artifact files
 node_modules/
